enable multiple keywords and enhance layout

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 	<button type="submit" name="submit" value="ch">中文搜尋</button>
 	<button type="submit" name="submit" value="en">English search</button>
 </form>
+<div id='queryResult'>
+</div>
 </body>
 </html>
